--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: android
 android:
-  components:
-    - build-tools-23.0.1
-    - android-23
-    - extra
+#  components:
+#    - build-tools-23.0.1
+#    - android-23
+#    - extra
 env:
   matrix:
     - ANDROID_SDKS=android-19,sysimg-19  ANDROID_TARGET=android-19  ANDROID_ABI=armeabi-v7a
