--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,12 @@
 language: android
 android:
-components:
+  components:
     - build-tools-21.1.2
-    - android-21
+    - android-L
+    - sys-img-x86-android-tv-l
+    - add-on
     - extra
-env:
-  matrix:
-    - ANDROID_SDKS=android-19,sysimg-19  ANDROID_TARGET=android-19  ANDROID_ABI=armeabi-v7a
-before_install:
-  - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
-  - emulator -avd test -no-skin -no-audio -no-window &
-before_script:
-  - ./ci/wait_for_emulator
-  - adb shell input keyevent 82 &
+  licenses:
+    - 'android-sdk-preview-license-52d11cd2'
+    - 'android-sdk-license-.+'
+    - 'google-gdk-license-.+'
