yet another try

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ android:
     - android-23
     - build-tools-23.0.1
     - extra-google-m2repository
+    - extra-android-m2repository
 
 # as per http://blog.travis-ci.com/2014-12-17-faster-builds-with-container-based-infrastructure/
 sudo: false
