--- a/.travis.yml
+++ b/.travis.yml
@@ -24,3 +24,12 @@ cache:
   directories:
   - $HOME/.m2
   - $HOME/.gradle
+env:
+  matrix:
+    - ANDROID_SDKS=android-23,sysimg-23  ANDROID_TARGET=android-23  ANDROID_ABI=armeabi-v7a
+before_install:
+  - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
+  - emulator -avd test -no-skin -no-audio -no-window &
+before_script:
+  - ./ci/wait_for_emulator
+  - adb shell input keyevent 82 &
