--- a/.travis.yml
+++ b/.travis.yml
@@ -28,10 +28,11 @@ env:
   matrix:
     - ANDROID_SDKS=android-19,sysimg-19  ANDROID_TARGET=android-19  ANDROID_ABI=armeabi-v7a
 before_install:
-  - pip install codecov
+  - pip install --user codecov
   - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
   - emulator -avd test -no-skin -no-audio -no-window &
 before_script:
+  - chmod 777 -R ./ci/
   - ./ci/wait_for_emulator
   - adb shell input keyevent 82 &
 
