yet another try

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,12 +29,15 @@ env:
     - ANDROID_SDKS=android-19,sysimg-19  ANDROID_TARGET=android-19  ANDROID_ABI=armeabi-v7a
 before_install:
   - pip install --user codecov
-  - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
-  - emulator -avd test -no-skin -no-audio -no-window &
-before_script:
-  - chmod 777 -R ./ci/
-  - ./ci/wait_for_emulator
-  - adb shell input keyevent 82 &
+#  - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
+#  - emulator -avd test -no-skin -no-audio -no-window &
+#before_script:
+#  - chmod 777 -R ./ci/
+#  - ./ci/wait_for_emulator
+#  - adb shell input keyevent 82 &
 
 after_success:
   - codecov
+
+
+script: "./gradlew clean assembleDebug"
